# ez-cli

./: .gitignore  Cargo.toml  README.md
src/: context.rs  main.rs  output.rs  utils.rs
src/commands/: chain.rs  compare.rs  copy.rs  count.rs  create_file.rs  create_folder.rs  disk.rs  download.rs  env.rs  explain.rs  find.rs  help_me.rs  list.rs  make_runnable.rs  mod.rs  move.rs  network.rs  pack.rs  peek.rs  permissions.rs  ports.rs  remove.rs  replace.rs  running.rs  schema.rs  search.rs  show.rs  size.rs  sort.rs  space.rs  stop.rs  tree.rs  unpack.rs  watch.rs  where.rs
