[package]
name = "ez"
version = "0.1.0"
edition = "2021"
authors = ["Vic <vic@example.com>"]
description = "Easy Unix - User-friendly replacements for common Unix commands"
license = "MIT"
repository = "https://github.com/sushilk1991/ez-cli"
keywords = ["cli", "unix", "tools", "user-friendly", "productivity"]
categories = ["command-line-utilities"]
rust-version = "1.70"

[[bin]]
name = "ez"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help"] }
colored = "2.0"
walkdir = "2.4"
humantime = "2.1"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
shell-words = "1.1"
regex = "1.10"
ureq = "2.9"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
similar = "2.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
